RESOLVED FIXED25214
SVG renderers have a bunch of broken/wrong extra code
https://bugs.webkit.org/show_bug.cgi?id=25214
Summary SVG renderers have a bunch of broken/wrong extra code
Eric Seidel (no email)
Reported 2009-04-15 11:29:18 PDT
SVG renderers have a bunch of broken/wrong extra code Mostly due to my historical confusions about the render tree and some methods not being removed after classes were split. RenderSVGRoot is an RenderBox and should just use all the standard RenderBox methods for inspector and repaint rects. RenderSVGContainer is *not* a RenderBox (any more) and thus doesn't need lineHeight or width/height or calcBounds. RenderSVGViewportContainer had some broken code which tried to see if the click was inside the container at all, but it was using width/height metrics based off of the containing block (from calcWidth) which is wrong!
Attachments
Remove unneeded broken code from SVG renderers (10.74 KB, patch)
2009-04-15 11:31 PDT, Eric Seidel (no email)
simon.fraser: review+
Eric Seidel (no email)
Comment 1 2009-04-15 11:31:36 PDT
Created attachment 29507 [details] Remove unneeded broken code from SVG renderers WebCore/ChangeLog | 34 ++++++++++++++ WebCore/rendering/RenderSVGContainer.cpp | 54 +--------------------- WebCore/rendering/RenderSVGContainer.h | 16 +------ WebCore/rendering/RenderSVGRoot.cpp | 34 -------------- WebCore/rendering/RenderSVGRoot.h | 8 +--- WebCore/rendering/RenderSVGViewportContainer.cpp | 16 +------ 6 files changed, 40 insertions(+), 122 deletions(-)
Eric Seidel (no email)
Comment 2 2009-04-15 11:32:59 PDT
Anyone with passing knowledge of the render tree should be able to review this. It's a pretty straightforward patch. Layout tests pass.
Simon Fraser (smfr)
Comment 3 2009-04-15 12:31:21 PDT
Comment on attachment 29507 [details] Remove unneeded broken code from SVG renderers r=me
Eric Seidel (no email)
Comment 4 2009-04-15 13:01:48 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/rendering/RenderSVGContainer.cpp M WebCore/rendering/RenderSVGContainer.h M WebCore/rendering/RenderSVGRoot.cpp M WebCore/rendering/RenderSVGRoot.h M WebCore/rendering/RenderSVGViewportContainer.cpp Committed r42554
Note You need to log in before you can comment on or make changes to this bug.